--- a/bridgehand.glade
+++ b/bridgehand.glade
@@ -212,6 +212,7 @@
 	      <property name="visible_horizontal">True</property>
 	      <property name="visible_vertical">True</property>
 	      <property name="is_important">False</property>
+	      <signal name="clicked" handler="on_button_hand_save_clicked" last_modification_time="Wed, 01 Mar 2006 20:15:19 GMT"/>
 	    </widget>
 	    <packing>
 	      <property name="expand">False</property>
@@ -289,6 +290,21 @@
 	      <property name="visible_horizontal">True</property>
 	      <property name="visible_vertical">True</property>
 	      <property name="is_important">False</property>
+	    </widget>
+	    <packing>
+	      <property name="expand">False</property>
+	      <property name="homogeneous">True</property>
+	    </packing>
+	  </child>
+
+	  <child>
+	    <widget class="GtkToolButton" id="handbutton_gib">
+	      <property name="visible">True</property>
+	      <property name="stock_id">gtk-convert</property>
+	      <property name="visible_horizontal">True</property>
+	      <property name="visible_vertical">True</property>
+	      <property name="is_important">False</property>
+	      <signal name="clicked" handler="on_handbutton_gib_clicked" last_modification_time="Wed, 01 Mar 2006 19:50:33 GMT"/>
 	    </widget>
 	    <packing>
 	      <property name="expand">False</property>
@@ -936,7 +952,7 @@ D: W, V: NS
 	      <property name="visible">True</property>
 	      <property name="label" translatable="yes">Ost</property>
 	      <property name="use_underline">True</property>
-	      <property name="stock_id">gtk-media-forward</property>
+	      <property name="stock_id">gtk-go-forward</property>
 	      <property name="visible_horizontal">True</property>
 	      <property name="visible_vertical">True</property>
 	      <property name="is_important">False</property>
@@ -996,7 +1012,7 @@ D: W, V: NS
 	      <property name="selectable">False</property>
 	      <property name="xalign">0.5</property>
 	      <property name="yalign">0.5</property>
-	      <property name="xpad">5</property>
+	      <property name="xpad">0</property>
 	      <property name="ypad">0</property>
 	    </widget>
 	    <packing>
@@ -1004,7 +1020,7 @@ D: W, V: NS
 	      <property name="right_attach">1</property>
 	      <property name="top_attach">0</property>
 	      <property name="bottom_attach">1</property>
-	      <property name="x_options">fill</property>
+	      <property name="x_options">shrink|fill</property>
 	      <property name="y_options">expand|shrink</property>
 	    </packing>
 	  </child>
@@ -1028,7 +1044,7 @@ D: W, V: NS
 	      <property name="right_attach">1</property>
 	      <property name="top_attach">1</property>
 	      <property name="bottom_attach">2</property>
-	      <property name="x_options">fill</property>
+	      <property name="x_options">shrink|fill</property>
 	      <property name="y_options">expand|shrink</property>
 	    </packing>
 	  </child>
@@ -1052,7 +1068,7 @@ D: W, V: NS
 	      <property name="right_attach">1</property>
 	      <property name="top_attach">2</property>
 	      <property name="bottom_attach">3</property>
-	      <property name="x_options">fill</property>
+	      <property name="x_options">shrink|fill</property>
 	      <property name="y_options">expand|shrink</property>
 	    </packing>
 	  </child>
@@ -1076,15 +1092,15 @@ D: W, V: NS
 	      <property name="right_attach">1</property>
 	      <property name="top_attach">3</property>
 	      <property name="bottom_attach">4</property>
-	      <property name="x_options">fill</property>
+	      <property name="x_options">shrink|fill</property>
 	      <property name="y_options">expand|shrink</property>
 	    </packing>
 	  </child>
 	</widget>
 	<packing>
 	  <property name="padding">0</property>
-	  <property name="expand">True</property>
-	  <property name="fill">True</property>
+	  <property name="expand">False</property>
+	  <property name="fill">False</property>
 	</packing>
       </child>
     </widget>
